My first change

--- a/firstnotebook.ipynb
+++ b/firstnotebook.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my first change\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('my first change')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def compound_interest(principle, rate, time): \n",
-    "  \n",
-    "    # Calculates compound interest  \n",
-    "    CI = principle * (pow((1 + rate / 100), time)) \n",
-    "    print(\"Compound interest is\", CI) \n",
-    "  \n",
-    "compound_interest(330000, 10.25, 5) "
-   ]
+   "source": []
   }
  ],
  "metadata": {
