--- a/secondnotebook.ipynb
+++ b/secondnotebook.ipynb
@@ -19,19 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my second change\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print ('my second change')"
+    "from google.cloud import storage\n",
+    "#reading a file on GCS\n",
+    "#Here the Service account attached with the JupyterLab VM will be picked up for authentication as a default\n",
+    "bucket_name=\"ankit-spark\"\n",
+    "file_name=\"livy.sh\"\n",
+    "storage_client = storage.Client()\n",
+    "bucket = storage_client.get_bucket(bucket_name)\n",
+    "blob = bucket.blob(file_name)\n",
+    "contents = blob.download_as_string()"
    ]
   }
  ],
