--- a/thirdnotebook.ipynb
+++ b/thirdnotebook.ipynb
@@ -2,37 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my first change\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print ('my first change')"
+    "print ('this is my third notebook')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my second change\n"
-     ]
-    }
-   ],
-   "source": [
-    "print ('my second changes')"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
