modified third notebook

--- a/thirdnotebook.ipynb
+++ b/thirdnotebook.ipynb
@@ -11,10 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is an addition to my third notebook\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('this is an addition to my third notebook')"
+   ]
   }
  ],
  "metadata": {
